# lgnrmfit

./: CMakeLists.txt  LICENSE  Mathderivation.m  README.md  lgnrmfit.cpp
